--- a/scatterplot.html
+++ b/scatterplot.html
@@ -26,6 +26,8 @@
                   [ 85,    21 ],
                   [ 220,   88 ]
               ];
+
+            var padding = 20;
 			
 			//Create SVG element
 			var svg = d3.select("body")
@@ -33,21 +35,32 @@
 						.attr("width",w)
 						.attr("height",h);
 
+			var xScale = d3.scale.linear()
+							.domain([0,d3.max(dataset,function(d){return d[0];})])
+							.range([padding,w-2*padding]);
+			var yScale = d3.scale.linear()
+							.domain([0,d3.max(dataset,function(d){return d[1];})])
+							.range([h-padding,padding]);
+
+			var rScale = d3.scale.linear()
+                     .domain([0, d3.max(dataset, function(d) { return d[1]; })])
+                     .range([2, 5]);
+
 			svg.selectAll("circle")
 				.data(dataset)
 				.enter()
 				.append("circle")
-				.attr("cx", function(d){return d[0]})
-				.attr("cy", function(d){return d[1]})
-				.attr("r",function(d){return Math.sqrt(h-d[1])});
+				.attr("cx", function(d){return xScale(d[0]);})
+				.attr("cy", function(d){return yScale(d[1]);})
+				.attr("r",function(d){return rScale(d[1]);});
 
 			svg.selectAll("text")
 				.data(dataset)
 				.enter()
 				.append("text")
 				.text(function(d){return d[0]+","+d[1];})
-				.attr("x", function(d){return d[0];})
-				.attr("y", function(d){return d[1];})
+				.attr("x", function(d){return xScale(d[0]);})
+				.attr("y", function(d){return yScale(d[1]);})
 				.attr("font-family","sans-serif")
 				.attr("font-size","11px")
 				.attr("fill","red");
