--- a/scatterplot.html
+++ b/scatterplot.html
@@ -5,15 +5,28 @@
 		<title>D3: A true bar chart with SVG rects</title>
       <script type="text/javascript" src="http://d3js.org/d3.v3.min.js"></script>
 		<style type="text/css">
-			/* No style rules here yet */		
+			/* No style rules here yet */	
+			
+			.axis path,
+			.axis line {
+				fill: none;
+				stroke: black;
+				shape-rendering: crispEdges;
+			}
+			
+			.axis text {
+				font-family: sans-serif;
+				font-size: 11px;
+			}
+
 		</style>
 	</head>
 	<body>
 		<script type="text/javascript">
 
 			//Width and height
-			var w = 600;
-			var h = 100;
+			var w = 500;
+			var h = 300;
 			var dataset = [
                   [ 5,     20 ],
                   [ 480,   90 ],
@@ -27,7 +40,7 @@
                   [ 220,   88 ]
               ];
 
-            var padding = 20;
+            var padding = 30;
 			
 			//Create SVG element
 			var svg = d3.select("body")
@@ -45,6 +58,10 @@
 			var rScale = d3.scale.linear()
                      .domain([0, d3.max(dataset, function(d) { return d[1]; })])
                      .range([2, 5]);
+
+            var xAxis = d3.svg.axis().scale(xScale).orient("bottom").ticks(5);
+
+            var yAxis = d3.svg.axis().scale(yScale).orient("left").ticks(5);
 
 			svg.selectAll("circle")
 				.data(dataset)
@@ -64,6 +81,18 @@
 				.attr("font-family","sans-serif")
 				.attr("font-size","11px")
 				.attr("fill","red");
+
+			//Create X axis
+			svg.append("g")
+				.attr("class", "axis")
+				.attr("transform", "translate(0," + (h - padding) + ")")
+				.call(xAxis);
+			
+			//Create Y axis
+			svg.append("g")
+				.attr("class", "axis")
+				.attr("transform", "translate(" + padding + ",0)")
+				.call(yAxis);
 
 
 			
