use colors scale

--- a/force.html
+++ b/force.html
@@ -20,8 +20,8 @@
 						.attr("width",w)
 						.attr("height",h);
 
-			var color_pool = ["red","orange","blue","yellow","green","black","gray","maroon","cyan","olive"];
-
+			// var color_pool = ["red","orange","blue","yellow","green","black","gray","maroon","cyan","olive"];
+			var colors = d3.scale.category10();
 			var dataset = {
 			        nodes: [
 			                { name: "Adam" },
@@ -90,9 +90,9 @@
 
 				});
 
-			function colors(i){
-				return color_pool[i];
-			}
+			// function colors(i){
+			// 	return color_pool[i];
+			// }
 
             
 
