--- a/force.html
+++ b/force.html
@@ -57,8 +57,8 @@
                      .links(dataset.edges)
                      .size([w, h])
                      .start()
-                     .linkDistance([50])        // <-- New!
-                     .charge([-100])            // <-- New!
+                     .linkDistance([50])       
+                     .charge([-100])            
                      .start();
 
             var edges = svg.selectAll("line")
@@ -90,9 +90,7 @@
 
 				});
 
-			// function colors(i){
-			// 	return color_pool[i];
-			// }
+			
 
             
 
