--- a/force.html
+++ b/force.html
@@ -5,8 +5,13 @@
 		<title>D3: Force</title>
       <script type="text/javascript" src="http://d3js.org/d3.v3.min.js"></script>
 		<style type="text/css">
-			/* No style rules here yet */		
+			/* No style rules here yet */	
+			d3-tip {
+			    line-height: 1;
+			    color: black;
+			}	
 		</style>
+		<script type='text/javascript' src="http://labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js"> </script>
 	</head>
 	<body>
 		<script type="text/javascript">
@@ -20,20 +25,29 @@
 						.attr("width",w)
 						.attr("height",h);
 
+			var tip = d3.tip()
+			    .attr('class', 'd3-tip')
+			    .offset([-10, 0])
+			    .html(function (d) {
+			    return  d.name + "";
+			})
+			svg.call(tip);
+
 			// var color_pool = ["red","orange","blue","yellow","green","black","gray","maroon","cyan","olive"];
 			var colors = d3.scale.category10();
 			var dataset = {
 			        nodes: [
-			                { name: "Adam" },
+			                { name: "梦想" },
 			                { name: "Bob" },
 			                { name: "Carrie" },
-			                { name: "Donovan" },
-			                { name: "Edward" },
+			                { name: "阳哥" },
+			                { name: "她" },
 			                { name: "Felicity" },
 			                { name: "George" },
 			                { name: "Hannah" },
 			                { name: "Iris" },
-			                { name: "Jerry" }
+			                { name: "Jerry" },
+			                { name: "Ronaldo"}
 			        ],
 			        edges: [
 			                { source: 0, target: 1 },
@@ -48,7 +62,9 @@
 			                { source: 5, target: 9 },
 			                { source: 6, target: 7 },
 			                { source: 7, target: 8 },
-			                { source: 8, target: 9 }
+			                { source: 8, target: 9 },
+			                { source: 7, target: 10},
+			                { source: 5, target: 10}
 			        ]
 			};
 
@@ -76,7 +92,9 @@
 					        .style("fill", function(d, i) {
 					                return colors(i);
 					        })
-					        .call(force.drag);
+					        .call(force.drag)
+					        .on('mouseover', tip.show)
+					        .on('mouseout', tip.hide); //Added 
 
 			force.on("tick", function() {
 
